# zkml-jolt

./: Cargo.toml
common/src/: rv_trace.rs
examples/onnx/: CNN.py  Cargo.toml  GradientBoostingModel.py  Linear.py
examples/onnx/data/: cnn.onnx  int8_cnn.onnx  xgboost.onnx
examples/onnx/guest/: Cargo.toml
examples/onnx/guest/src/: lib.rs  main.rs
examples/onnx/src/: inference.rs  main.rs  onnxparser.rs  ort.rs  parse.rs  prove_onnx.rs
examples/onnx/util/: Cargo.toml
examples/onnx/util/src/: lib.rs
jolt/: Cargo.toml  rustfmt.toml
jolt-core/: Cargo.toml
jolt-core/src/: lib.rs
jolt-core/src/host/: mod.rs
jolt-core/src/jolt/instruction/: matmul.rs  mod.rs
jolt-core/src/jolt/vm/: bytecode.rs  mod.rs
jolt-core/src/wasm_host/: mod.rs
jolt-core/src/zkE/: mod.rs  tests.rs
jolt-core/src/zkE/vm/: bytecode.rs  mod.rs  wasm_vm.rs
jolt-core/src/zkE/wasm_host/: mod.rs
jolt-core/wasms/: bitwise_arith.wat
jolt-sdk/: Cargo.toml
jolt/common/src/: rv_trace.rs
jolt/jolt-core/benches/: binding.rs  commit.rs  compute_cubic.rs  grand_product.rs  msm.rs  msm_adapter_batch.rs  msm_batch.rs
jolt/jolt-core/src/benches/: bench.rs
jolt/jolt-core/src/field/: mod.rs
jolt/jolt-core/src/jolt/instruction/: add.rs  and.rs  beq.rs  bge.rs  bgeu.rs  bne.rs  mod.rs  mul.rs  mulhu.rs  mulu.rs  or.rs  sll.rs  slt.rs  sltu.rs  sra.rs  srl.rs  sub.rs  virtual_advice.rs  virtual_assert_halfword_alignment.rs  virtual_assert_lte.rs  virtual_assert_valid_div0.rs  virtual_assert_valid_signed_remainder.rs  virtual_assert_valid_unsigned_remainder.rs  virtual_move.rs  virtual_movsign.rs  virtual_pow2.rs  virtual_right_shift_padding.rs  xor.rs
jolt/jolt-core/src/jolt/subtable/: mod.rs  sll.rs  sra_sign.rs  srl.rs
jolt/jolt-core/src/jolt/trace/: rv.rs
jolt/jolt-core/src/jolt/vm/: bytecode.rs  instruction_lookups.rs  mod.rs  read_write_memory.rs  rv32i_vm.rs  timestamp_range_check.rs
jolt/jolt-core/src/lasso/: memory_checking.rs  surge.rs
jolt/jolt-core/src/msm/: mod.rs
jolt/jolt-core/src/msm/icicle/: adapter.rs  mod.rs
jolt/jolt-core/src/poly/: compact_polynomial.rs  dense_mlpoly.rs  unipoly.rs
jolt/jolt-core/src/poly/commitment/: commitment_scheme.rs  hyperkzg.rs  hyrax.rs  kzg.rs  mock.rs  pedersen.rs  zeromorph.rs
jolt/jolt-core/src/poly/commitment/bmmtv/: gipa.rs  poly_commit.rs
jolt/jolt-core/src/r1cs/: builder.rs  inputs.rs  ops.rs  spartan.rs
jolt/jolt-core/src/subprotocols/: grand_product.rs  grand_product_quarks.rs  sparse_grand_product.rs  sumcheck.rs
jolt/jolt-core/src/utils/: sol_types.rs
jolt/jolt-core/src/zkE/: tests.rs
jolt/jolt-core/src/zkE/vm/: bytecode.rs  mod.rs  wasm_vm.rs
jolt/jolt-core/src/zkE/wasm_host/: mod.rs
jolt/tracer/src/emulator/: cpu.rs
jolt/wasms/: calculate-reward.wasm  ge.wat  lt.wat
jolt/zkEngine/: Cargo.toml
onnx_tracer/: Cargo.toml  README.md
tracer/src/: lib.rs
tracer/src/emulator/: cpu.rs
wasmi/: Cargo.toml
wasmi/crates/c_api/: Cargo.toml
wasmi/crates/c_api/artifact/: Cargo.toml
wasmi/crates/c_api/macro/: Cargo.toml
wasmi/crates/collections/: Cargo.toml
wasmi/crates/core/: Cargo.toml
wasmi/crates/fuzz/: Cargo.toml
wasmi/crates/ir/: Cargo.toml
wasmi/crates/ir/src/: enum.rs  immeditate.rs
wasmi/crates/tracer/: Cargo.toml
wasmi/crates/tracer/binaries/: add_sub_mul_32.wat  bitwise_arith.wat
wasmi/crates/tracer/src/: args.rs  context.rs  display.rs  lib.rs  tests.rs  utils.rs
wasmi/crates/tracer/wasms/: shifts_arith.wat
wasmi/crates/wasi/: Cargo.toml
wasmi/crates/wasmi/: Cargo.toml
wasmi/crates/wasmi/src/: lib.rs
wasmi/crates/wasmi/src/engine/: code_map.rs  mod.rs
wasmi/crates/wasmi/src/engine/executor/: instr_ptr.rs  instrs.rs  mod.rs
wasmi/crates/wasmi/src/store/: mod.rs
wasmi/crates/wasmi/src/tracer/: mod.rs
wasmi/crates/wast/: Cargo.toml
wasmi/crates/wast/tests/: mod.rs
wasms/: energy_usage_32.wasm
zkEngine/: Cargo.toml
zkEngine/src/: main.rs
